[project]
name = "superstack"
version = "0.1.0"
description = "Two lines of text in one line's height: a stacked-pair OpenType font generator."
requires-python = ">=3.10"
dependencies = ["fonttools>=4.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
